--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -2,6 +2,8 @@
   flex: 0.3;
   max-width: 300px;
   padding-right: 20px;
+  overflow: scroll;
+  padding-bottom: 40px;
 }
 
 .sidebar__compose {
@@ -18,4 +20,14 @@
 .sidebar__footer {
   display: flex;
   justify-content: center;
+  padding-bottom: 42px;
+}
+
+.sidebar::-webkit-scrollbar {
+  display: none;
+}
+
+.sidebar::-webkit-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
